--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_CLIENT_ID="540240370272-2abgdq6eic1u0iku33quu1vl7qh37oq3.apps.googleusercontent.com"
+REACT_APP_CLIENT_ID=540240370272-2abgdq6eic1u0iku33quu1vl7qh37oq3.apps.googleusercontent.com
